# bluepy3

./: .bandit  .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  BUILDING.md  CONTRIBUTING.md  LICENSE  README.md  _setup.cfg  build  environment.yml  mkbld  pyproject.toml  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: codeql.yml
bluepy3/: CPPLINT.cfg  Makefile  __init__.py  blescan.py  bluepy3-helper.c  btle.py  config.5.66.h  config.5.68.h  config.5.71.h  get_services.py  helpermaker.py  scanner.py  sensortag.py  thingy52.py  uuids.json  uuids.legacy.json  version.h
bluepy3/config/: config.5.47.h  config.5.50.h  config.5.60.h  config.5.66.h  config.5.68.h  config.5.70.h  config.5.71.h  config.5.72.h  config.5.73.h  config.5.75.h  config.5.76.h  config.5.77.h  config.5.78.h
docs/: Makefile  assignednumbers.rst  conf.py  delegate.rst  descriptor.rst  index.rst  notifications.rst  peripheral.rst  scanner.rst
src/: setup.py
src/bluepy/: blescan.py  btle.py  get_services.py  scanner.py  sensortag.py  thingy52.py
src/bluepy3/: Makefile  __init__.py  blescan.py  bluepy3-helper.c  bluez-src.tgz  btle.py  config.5.50.h  config.5.60.h  config.5.66.h  config.5.70.h  get_services.py  helpermaker.py  py.typed  scan_fuzz.py  scanner.py  sensortag.py  thingy52.py  uuids.json  version.h
tests/: test_uuid.py
