# pyproject.toml

# Hatchling  https://packaging.python.org/en/latest/key_projects/#hatch
#            https://hatch.pypa.io/latest/config/metadata/
# PEP 621    https://peps.python.org/pep-0621/

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bluepy3"
#version = "1.12.1"  # latest/current distribution version
version = "1.15.1"  # latest test version
description = "A Python3 module for interfacing with Bluetooth LE devices on Linux."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
# license-files = { paths = ["LICENSE"] }
authors = [
    { name="Mausy5043" },
]
keywords = [
    "Bluetooth",
    "Bluetooth Smart",
    "BLE",
    "Bluetooth Low Energy",
    "Raspberry Pi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C",
    "Topic :: Home Automation"
]
dependencies = []


[tool.hatch.build]
include = [
    "BUILDING.md",
    "environment.yml",
    "requirements.txt",
    "tox.ini",
    "src/bluepy3/*.py",
    "src/bluepy3/bluepy3-helper.c",
    "src/bluepy3/config.*.h",
    "src/bluepy3/Makefile",
    "src/bluepy3/py.typed",
    "src/bluepy3/uuids.json",
    "src/bluepy3/version.h",
]


[project.scripts]
blescan = 'bluepy3.blescan:main'


[project.urls]
"Homepage" = "https://github.com/Mausy5043/bluepy3"
"Bug Tracker" = "https://github.com/Mausy5043/bluepy3/issues"
