# Project: bluepy3

# Hatchling  https://packaging.python.org/en/latest/key_projects/#hatch
#            https://hatch.pypa.io/latest/config/metadata/
# PEP 621    https://peps.python.org/pep-0621/

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bluepy3"
version = "2.14.2"  # latest/current distribution version
# version = "2.15.1"  # latest test version
description = "A Python3 module for interfacing with Bluetooth LE devices on Linux."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
# license-files = { paths = ["LICENSE"] }
authors = [
    { name="Mausy5043" },
]
keywords = [
    "Bluetooth",
    "Bluetooth Smart",
    "BLE",
    "Bluetooth Low Energy",
    "Raspberry Pi",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
    "Topic :: Home Automation"
]
dependencies = [
    "tomli==2.0.1",
]

[tool.hatch.build]
include = [
    "bluepy3/*.py",
    "bluepy3/bluepy3-helper",   # built during install
    "bluepy3/bluepy3-helper.c",
    "bluepy3/config/config.*.h",
    "bluepy3/Makefile",
    "bluepy3/py.typed",
    "bluepy3/uuids.json",
    "bluepy3/version.h",
]

[tool.hatch.build.targets.wheel.force-include]
"./pyproject.toml" = "bluepy3/pyproject.toml"

[project.scripts]
blescan = 'bluepy3.blescan:main'
helpermaker = 'bluepy3.helpermaker:main'

[project.urls]
"Homepage" = "https://github.com/Mausy5043/bluepy3"
"Bug Tracker" = "https://github.com/Mausy5043/bluepy3/issues"

[tool.autopep8]
max_line_length = 98
in-place = true
recursive = true
aggressive = 2
ignore = "E203"

[tool.bandit]
skips = ["B101", "B603"]
# ,B601

[tool.black]
line-length = 98
target-version = ["py39", "py310", "py311", "py312"]

[tool.flake8]
max_line_length = 98
ignore = ["E203", "E501", "C901", "W503"]

[tool.pydocstyle]
inherit = false
convention = "google"
match = ".*\\.py"
add-ignore = "D"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
no_implicit_reexport = true
extra_checks = true
